docs: responsive design fix (overflowing content) (#2181)
Stops the docs plugin wrapper element from overflowing the viewport.

Closes #2179

---------

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -229,7 +229,11 @@ nav.navbar .dropdown__menu {
 }
 
 .main-wrapper {
-    align-items: center;
+    align-items: safe center;
+}
+
+.main-wrapper > div {
+    max-width: calc(min(100%, var(--max-layout-width))) !important;
 }
 
 .main-wrapper a[class*='sidebarLogo'] img {
